tests/compile_fail/state/wrong_top_state_enum.rs
use moku::*;

#[state_machine]
mod blinky {
    use moku::*;

    #[machine_module]
    mod state_machine {}

    struct Top;
    impl TopState<BlonkyState> for Top {}
}

fn main() {}
